<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Settings"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Font Size"
                android:textSize="20sp"
                android:visibility="gone" />

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/smallRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="Small"
                            android:textSize="14sp" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/mediumRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Medium"
                            android:textSize="18sp" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/largeRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Large"
                            android:textSize="22sp" />

                    </RadioGroup>

                    <com.google.android.material.card.MaterialCardView
                        style="@style/Widget.Material3.CardView.Filled"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:text="Quick brown fox jumps over the lazy dog." />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="8dp"
                        android:text="Apply" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="?android:attr/listDivider"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Character Limit"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/character_limit"
                android:textSize="14sp" />

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.slider.Slider
                android:id="@+id/charLimitSlider"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:valueFrom="2000.0"
                android:valueTo="20000.0"
                android:stepSize="1000"/>

            <TextView
                android:id="@+id/charLimitTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Limiting to 4000 characters"/>

            <TextView
                android:id="@+id/testTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:layout_weight="1"
                    android:text="Auto Set" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:onClick="resetCharLimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Reset to default" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:onClick="testCharLimitPressed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Test selected limit" />

        </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Threads &amp; Delegates"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/threads_info"
                android:textSize="14sp" />

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/threads_warning"/>

                    <com.google.android.material.card.MaterialCardView
                        style="@style/Widget.Material3.CardView.Filled"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="16dp">

                        <TextView
                            android:id="@+id/statusTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:text="Currently set to 2 thread(s).\nUsing CPU as a delegate." />

                    </com.google.android.material.card.MaterialCardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="16dp"
                            android:gravity="center"
                            android:text="Set thread count:" />

                        <com.google.android.material.button.MaterialButton
                            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="decreaseThreadCount"
                            app:icon="@drawable/round_arrow_circle_left_24" />

                        <com.google.android.material.card.MaterialCardView
                            style="@style/Widget.Material3.CardView.Outlined"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="8dp">

                            <TextView
                                android:id="@+id/threadCountTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="16dp"
                                android:text="2" />

                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.button.MaterialButton
                            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:onClick="increaseThreadCount"
                            app:icon="@drawable/round_arrow_circle_right_24" />

                    </LinearLayout>

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="8dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="Set delegate" />

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/delegateToggleButton"
                        android:layout_gravity="center"
                        app:singleSelection="true"
                        app:selectionRequired="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            style="?attr/materialButtonOutlinedStyle"
                            android:id="@+id/cpuBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="CPU" />

                        <Button
                            style="?attr/materialButtonOutlinedStyle"
                            android:id="@+id/gpuBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="GPU" />

                        <Button
                            style="?attr/materialButtonOutlinedStyle"
                            android:id="@+id/nnapiBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="NNAPI" />

                    </com.google.android.material.button.MaterialButtonToggleGroup>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/resetButton"
                        android:onClick="resetButtonTapped"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:layout_marginTop="8dp"
                        android:layout_gravity="end"
                        android:text="Reset to default"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>